# awesome_agent_tools

./: .gitignore  .gitmodules  AGENT.md  README.md  README.zh-CN.md  cursor_agent_transcript_viewer.py
Tools/JarvanKB/Engine/bilibili/: .gitignore  pyproject.toml
Tools/JarvanKB/Engine/bilibili/config/: bilibili-engine.example.yaml
Tools/JarvanKB/Engine/bilibili/deploy/bilinote/: .env.example  README.md  bn-cookie-sync.py  docker-compose.yml
Tools/JarvanKB/Engine/bilibili/docs/: README.md  architecture.md  interface.md
Tools/JarvanKB/Engine/bilibili/docs/RepoMem/: decisions.md
Tools/JarvanKB/Engine/bilibili/src/bilibili/: __init__.py  bilinote_client.py  cli.py  config.py  engine.py  errors.py  metadata.py  models.py  ratelimit.py  render.py  subtitle.py  url_parser.py
Tools/JarvanKB/Engine/bilibili/tests/: conftest.py  test_bilinote_client.py  test_cli.py  test_config.py  test_engine.py  test_errors.py  test_import.py  test_metadata.py  test_models.py  test_public_api.py  test_ratelimit.py  test_render_document.py  test_render_prose.py  test_subtitle.py  test_url_parser.py
Tools/JarvanKB/Engine/bilibili/tests/fixtures/: subtitle_body.json  subtitle_tracks.json  view_info.json
Tools/JarvanKB/Engine/common/: pyproject.toml
Tools/JarvanKB/Engine/common/docs/: README.md  interface.md
Tools/JarvanKB/Engine/common/docs/RepoMem/: architecture.md  decisions.md
Tools/JarvanKB/Engine/common/src/: __init__.py  llm_client.py
Tools/JarvanKB/Engine/common/src/jarvankb_common/: __init__.py  classify.py  config.py  llm_client.py  llm_config.py
Tools/JarvanKB/Engine/common/src/jarvankb_common.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Tools/JarvanKB/Engine/common/tests/: test_api_base_literal.py  test_classify.py  test_config.py  test_llm_client.py  test_llm_config.py  test_stream_no_replay.py
Tools/JarvanKB/Engine/zhihu/: .gitignore  pyproject.toml
Tools/JarvanKB/Engine/zhihu/docs/: README.md  architecture.md  interface.md
Tools/JarvanKB/Engine/zhihu/docs/RepoMem/: decisions.md
Tools/JarvanKB/Engine/zhihu/src/zhihu/: __init__.py  _entities.py  cli.py  comments.py  engine.py  errors.py  fetcher.py  initialdata.py  markdown.py  models.py  url_router.py
Tools/JarvanKB/Engine/zhihu/tests/: conftest.py  test_cli.py  test_comments.py  test_engine.py  test_entities.py  test_errors.py  test_fetcher.py  test_html_scrape.py  test_initialdata.py  test_markdown.py  test_models.py  test_parsers_answer.py  test_parsers_article.py  test_parsers_question.py  test_url_router.py
Tools/JarvanKB/Engine/zhihu/tests/fixtures/: answer_page.html  initialdata_min.html
Tools/JarvanKB/Service/crawl/bilibili-watcher/: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
Tools/JarvanKB/Service/crawl/bilibili-watcher/config/: bilibili-watcher.example.yaml
Tools/JarvanKB/Service/crawl/bilibili-watcher/docs/: README.md  architecture.md  interface.md  runbook.md
Tools/JarvanKB/Service/crawl/bilibili-watcher/tests/: conftest.py  test_config.py  test_cookie_provider.py  test_favorites_client.py  test_fetcher.py  test_saver.py  test_watcher_integration.py  test_watermark_store.py
Tools/JarvanKB/Service/crawl/zhihu-watcher/: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
Tools/JarvanKB/Service/crawl/zhihu-watcher/config/: zhihu-watcher.example.yaml
Tools/JarvanKB/Service/crawl/zhihu-watcher/docs/: README.md  architecture.md  interface.md  runbook.md
Tools/JarvanKB/Service/crawl/zhihu-watcher/tests/: conftest.py  test_attention.py  test_classifier.py  test_config.py  test_cookie_provider.py  test_failure_store.py  test_favorites_client.py  test_fetcher.py  test_ledger_store.py  test_resolver.py  test_saver.py  test_watcher_integration.py  test_watermark_store.py
Tools/JarvanKB/Skill/crawl/bilibili-crawl/: .gitignore  SKILL.md  config.example.yaml  pyproject.toml
Tools/JarvanKB/Skill/crawl/bilibili-crawl/docs/: README.md  architecture.md  interface.md
Tools/JarvanKB/Skill/crawl/bilibili-crawl/scripts/: live_smoke.py  sync-skill.sh
Tools/JarvanKB/Skill/crawl/bilibili-crawl/tests/: test_api.py  test_classify.py  test_cli.py  test_config.py  test_cookie.py  test_saver.py  test_smoke.py
Tools/JarvanKB/Skill/crawl/zhihu-crawl/: .gitignore  SKILL.md  config.example.yaml  pyproject.toml
Tools/JarvanKB/Skill/crawl/zhihu-crawl/docs/: README.md  architecture.md  interface.md
Tools/JarvanKB/Skill/crawl/zhihu-crawl/scripts/: live_smoke.py  sync-skill.sh
Tools/JarvanKB/Skill/crawl/zhihu-crawl/tests/: test_api.py  test_classify.py  test_cli.py  test_config.py  (+5 more)
(+357 files in other folders)
