[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvankb-common"
version = "0.1.0"
description = "JarvanKB shared layer: LLMClient (litellm backend) + config loader"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.40",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
