[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bilibili-watcher"
version = "0.1.0"
description = "Polling watcher for Bilibili favorites: new videos -> SP-4a engine -> Markdown"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "cryptography>=42",
    "apscheduler>=3.10",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-httpx>=0.30"]

[project.scripts]
bilibili-watcher = "bilibili_watcher.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
