[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "zhihu-crawl"
version = "0.1.0"
description = "Zhihu skill: URL -> frozen zhihu engine -> save Markdown (vague-path LLM classification)"
requires-python = ">=3.11"
dependencies = [
    "zhihu-engine",
    "jarvankb-common",
    "httpx>=0.27",
    "pycryptodome>=3.20",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
zhihu-crawl = "zhihu_crawl.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
